--- a/manuscripts/24-jb-dags/24-jb-dags.tex
+++ b/manuscripts/24-jb-dags/24-jb-dags.tex
@@ -42,28 +42,14 @@
 \setlength{\emergencystretch}{3em} % prevent overfull lines
 \setcounter{secnumdepth}{-\maxdimen} % remove section numbering
 % Make \paragraph and \subparagraph free-standing
-\makeatletter
 \ifx\paragraph\undefined\else
   \let\oldparagraph\paragraph
-  \renewcommand{\paragraph}{
-    \@ifstar
-      \xxxParagraphStar
-      \xxxParagraphNoStar
-  }
-  \newcommand{\xxxParagraphStar}[1]{\oldparagraph*{#1}\mbox{}}
-  \newcommand{\xxxParagraphNoStar}[1]{\oldparagraph{#1}\mbox{}}
+  \renewcommand{\paragraph}[1]{\oldparagraph{#1}\mbox{}}
 \fi
 \ifx\subparagraph\undefined\else
   \let\oldsubparagraph\subparagraph
-  \renewcommand{\subparagraph}{
-    \@ifstar
-      \xxxSubParagraphStar
-      \xxxSubParagraphNoStar
-  }
-  \newcommand{\xxxSubParagraphStar}[1]{\oldsubparagraph*{#1}\mbox{}}
-  \newcommand{\xxxSubParagraphNoStar}[1]{\oldsubparagraph{#1}\mbox{}}
+  \renewcommand{\subparagraph}[1]{\oldsubparagraph{#1}\mbox{}}
 \fi
-\makeatother
 
 
 \providecommand{\tightlist}{%
@@ -188,7 +174,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={Causal Directed Acyclic Graphs (DAGs): A Practical Guide},
+  pdftitle={Causal Directed Acyclic Graphs (DAGs) and Single World Intervention Graphs (SWIGs): A Practical Guide},
   pdfauthor={Joseph A. Bulbulia},
   colorlinks=true,
   linkcolor={blue},
@@ -197,7 +183,8 @@
   urlcolor={Blue},
   pdfcreator={LaTeX via pandoc}}
 
-\title{Causal Directed Acyclic Graphs (DAGs): A Practical Guide}
+\title{Causal Directed Acyclic Graphs (DAGs) and Single World
+Intervention Graphs (SWIGs): A Practical Guide}
 
 \usepackage{academicons}
 \usepackage{xcolor}
@@ -210,35 +197,32 @@
       
 
 
-\date{2024-04-25}
+\date{2024-05-11}
 \begin{document}
 \maketitle
 \begin{abstract}
-In causal inference, accurately quantifying a causal effect requires
-contrasting hypothetical counterfactual states simulated from data. This
-complex task relies on a framework of explicit assumptions and
-systematic, multi-step workflows that begin by stating a clear causal
-question and a clear target population for whom inferences are meant to
-be valid. Causal directed acyclic graphs (DAGs) are tools within this
-multi-step workflow. We deploy them after we have stated our causal
-question and stated our target population, to help us understand whether
-and how the counterfactual contrasts we target can be identified from
-data, based on assumptions we obtain from previous science (structural
-assumptions). This guide offers practical advice for constructing causal
-directed acyclic graphs that are effective and safe. These causal graphs
-make clear causal inference's mission-critical demand for obtaining
-accuracy in the relative timing of events of confounders, treatements,
-and outcomes, and how, even when timing is ensured, valid causal
-inferences remain elusive.
+Causal inference requires contrasting counterfactual states of the world
+under pre-specified interventions. Obtaining counterfactual contrasts
+from data, in turn, relies on a framework of explicit assumptions and
+careful, multi-step workflows. Causal diagrams are powerful tools for
+clarifying whether and how the counterfactual contrasts we seek may be
+identified from data. Here, I explain how to use two types of causal
+diagram (1) causal directed acyclic graphs (DAGs), which are
+user-friendly, and (2) single world intervention graphs (SWIGs), which
+are complete. I use these tools to clarify frequently misunderstood
+concepts of measurement error, interaction, mediation, longitudinal
+feedback, and confounding in experiments. Along the way, I offer
+practical tips and suggestions to avoid common pitfalls.
 
 \textbf{KEYWORDS}: \emph{Causal Inference}; \emph{Culture};
 \emph{DAGs};* \emph{Evolution}; \emph{Human Sciences};
-\emph{Longitudinal}.
+\emph{Longitudinal}; Single World Intervention Graphs, Single World
+Intervention Template, SWIGs; SWITs.
 \end{abstract}
 
 \subsection{Introduction}\label{introduction}
 
-All human research begins with two questions:
+Human research begins with two questions:
 
 \begin{quote}
 \begin{enumerate}
@@ -251,108 +235,99 @@ All human research begins with two questions:
 \end{enumerate}
 \end{quote}
 
-In many human sciences, our questions are causal. We want ot
+In the human sciences, questions are typically causal. We want to
+understand what would happen if we were to intervene on the variables of
+interest. However, many human scientists report non-causal associations.
+Standard practice begins is to collect data, to apply regression models
+of varying complexity, and to report the coefficients of these models,
+describing these coefficients as ``predictions.'' Even when models
+predict well it is typically unclear how to relate these coefficients
+relate to the scientific questions that animated our interests. The
+oracles are mysterious. The good news is that when assumptions are
+satisfied, the associations we obtain from data may indicate causality.
+For example, when interventions are controlled and randomised, often we
+can be be confident that association implies causation. However careful
+workflows are needed.
 
-In human science, we often place statistics first. We use the terms
-``independent variable'' and ``dependent variable.'' Sometimes we use
-the terms ``exogenous variable'' and ``endogenous variable.'' Sometimes
-we use the term ``predictor variable'' to describe the ``dependent'' or
-``endogenous'' variable. These words are confusing.
+Within the careful workflows required for causal inference, causal
+diagrams -- or causal graphs -- help investigators to understand whether
+and how causal effects may be identified from data. We require
+assumptions because This is a challenging because to quantitatively
+address causal questions we must contrast different ways the world might
+have been, using data we have obtain from the world as it is realised.
+The world as it has been realised only tells us part of any causal
+story.
 
-When asking causal questions, we want to understand what would happen if
-we intervened.
+After briefly reviewing the initial steps in a causal inference workflow
+that precede deploying causal diagrams, I introduce \textbf{causal
+directed acyclic graphs} -- or ``DAGs.'' I explain \textbf{the five
+elementary graphical structures} from which all causal directed acyclic
+graphs may be derived. The primary purpose a causal directed acyclic
+graph encodes investigator assumptions about how variables other than a
+treatment variable, or sequence of treatment variables of interest may
+lead to non-causal associations with the outcome or outcomes of
+interest. Our primary focus here will be on the application of causal
+directed acyclic graphs to evaluating non-causal relations of
+confounding bias. However we will also consider applications of causal
+directed acyclic graphs to threats of measurement or information bias,
+and to threats of sample-restriction bias, which some investigators also
+call ``selection'' bias.
 
-In causal inference, we wil the term ``treatment'' or, equivalently
-``exposure'', to denote an intervention; we use the term ``outcome'' to
-denote the effect of an intervention.\footnote{``What if?'' questions
-  implicitly invoke the idea of intervening on the world. ``If we did
-  \emph{this}, \emph{then} what would happen to \emph{that}\ldots?'' Our
-  preferred terminology reflects our interest in the effects of
-  interventions.}
+Next, I explain how the application of \textbf{the four elementary
+rules} allows investigators to evaluate whether and how, conditional on
+the structural assumptions encoded in a causal diagram, investigators
+may identify causal effects from the relations they have assumed to hold
+in the world. I then proceed with a series of illustrations that
+demonstrate how applying the \textbf{the four elementary rules} to
+different combinations of \textbf{the five elementary structures}
+clarifies whether consistent estimates of magnitudes may be obtained
+from observational data focussing on: (1) the imperative for temporal
+order in data; (2) the insufficiency of temporal order for
+identification; (3) measurement-error biases (4) sample-restriction
+biases (5) confounding biases in experiments; (6) confounding and
+sample-restriction biases in time-fixed and time-varying sequential
+treatments.
 
-\subsection{Where do causal diagrams fit
-in?}\label{where-do-causal-diagrams-fit-in}
+Next, I introduce single world intervention graphs -- also known as
+SWIGs, which are useful for evaluating structural sources of bias when
+there are time-varying treatments. Another advantage of single world
+intervention graphs is that they are fully general. They allow
+investigators to encode assumptions about the conditional dependencies
+for the counterfactuals data from which their causal contrasts are
+derived.
 
-\textbf{Internal Validity}: we say internal validity is compromised if
-the association between the treatment and outcome in a study does not
-consistently reflect causality in the sample population as defined at
-baseline.
+At first, it might seem strange that relationships must be assumed when
+learning about relationships. However, understanding this requirement is
+essential for using causal diagrams responsibly
 
-\textbf{External validity}: we say external validity is compromised if
-the association between the treatment and outcome in a study does not
-consistently reflect causality in the target population as defined at
-baseline
+I provide a glossary at the end of this article to help readers wade
+through what has evolved into a terminological quagmires. However
+readers should keep in mind that the elementary concepts underpinning
+causal inference are not complex.
 
-The following failure modes threaten human science research:
+Unfortunately a proliferation of terminology has muddled what are
+essentially
 
-\begin{itemize}
-\item
-  \textbf{Failures to Ask a Question}:
+Third, we apply the four elementary rules to problems, revealing that
+collecting or aligning our data with the presumed order of causality, in
+which causes precede effects, greatly reduces opportunities for
+confounding
 
-  \begin{itemize}
-  \tightlist
-  \item
-    We have not stated the quantities we want to estimate. In causal
-    inference, these are counter-factual quantities.
-  \item
-    We have not stated the population for whom knowledge is meant to
-    generalise
-  \end{itemize}
-\item
-  \textbf{Failures to Answer our Question}: \textbf{Failures of Internal
-  Validity}: the associations we obtain from the application of models
-  to data do not reflect causality. \textbf{Poor Estimators}:
-  \textbf{Poor Data} \textbf{Poor Models}
+Fourth, we use to explain failure modes for caual inference, even when
+temporal order in one's data is assured.
 
-  \textbf{Failures of External Validity}: our findings do not generalise
-  from the \emph{sample population} to the \emph{target population}. We
-  fail when our results do not generalise as we think.
-\item
-  \textbf{Other Failures of Interpretation}: we made a paper airplane,
-  and imagined we could fly it to the moon.
-\end{itemize}
+Fifth, we use causal diagrams to clarify confounding in randomised
+experiments
 
-Causal directed acyclic graphs were developed to address internal
-validity from \textbf{confounding bias.} They presuppose that we have
-stated our causal question, and the population for whom knowledge is
-meant to generalise. They do not protect us from failures upstream and
-down stream in the workflow.
-
-Here we:
-
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\item
-  consider the five elementary graphical structures employed in causal
-  diagrams.
-\item
-  explain the four elementary rules that allow investigators to identify
-  causal effects from the asserted relations in a causal diagram.
-\item
-  graphically explain how temporal order can avoid pitfalls
-\item
-  graphically explain why temporal order is insufficient
-\end{enumerate}
-
-5 graphically explain how confounding can occur in randomised
-experiments.
-
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\setcounter{enumi}{5}
-\tightlist
-\item
-  practical advice for applied researchers.
-\end{enumerate}
+Finally, we offer practical advice about how to construct causal
+directed acyclic graphs, and suggest best practices
 
 \subsection{Preliminaries}\label{preliminaries}
 
-The concept of ``confounding bias'' helps to clarify what it is at stake
-when evaluating the \emph{internal validity} of a study. As we shall
-see, there are several equivalent definitions of ``confounding bias,''
-which we will describe during the upcoming weeks.
-
-The definition of confounding bias that we will examine today is:
+Causal diagrams, also called causal graph are graphical tools whose
+primary purpose is to enable investigators to evaluate identifications
+assumptions. Here, we will mostly focus on threats to identification
+arising from confounding biases.
 
 \textbf{Confounding bias}: there is no confounding bias if:
 
@@ -361,24 +336,19 @@ The definition of confounding bias that we will examine today is:
 \item
   the distribution of variables that might affect the outcome are
   imbalanced in the treatment groups to be compared
-\item
-  if the distribution of variables that might affect the outcome are
-  balanced in the treatment groups to be compared
 \end{itemize}
 
-Causal graphs allow us to say: there is no confounding bais if:\\
-- there is no open back-door path between the treatment and the path
-between the treatment and outcome is unblocked.
-
-Causal diagrams, also called causal graphs, Directed Acyclic Graphs, and
-Causal Directed Acyclic Graphs, are graphical tools whose
-\textbf{primary} purpose is to enable investigators to detect
-confounding biases.
+Causal graphs allow us to say:\\
+- if there is no open back-door path between the treatment and the path
+between the treatment and outcome is unblocked, there is no confounding
+bais.
 
 Before describing how causal diagrams work, we first define the meanings
 of their symbols. Note there is no single convention for creating causal
-diagrams, so it is important that we are clear when defining our
-meanings.
+graph, so it is important that we are clear when defining our meanings.
+
+The concept of ``confounding bias'' helps to clarify what it is at stake
+when evaluating the \emph{internal validity} of a study.
 
 \newpage{}
 
@@ -399,27 +369,21 @@ conventions}\label{variable-naming-conventions}
 
 For us:
 
-\paragraph{\texorpdfstring{\(X\) denotes a random variable without
-reference to its
-role;}{X denotes a random variable without reference to its role;}}\label{x-denotes-a-random-variable-without-reference-to-its-role}
+\textbf{\(X\) denotes a random variable without reference to its role}
 
-\paragraph{\texorpdfstring{\(A\) denotes the ``treatment'' or
-``exposure''
-variable.}{A denotes the ``treatment'' or ``exposure'' variable.}}\label{a-denotes-the-treatment-or-exposure-variable.}
+\textbf{\(A\) denotes the ``treatment'' or ``exposure'' variable.}
 
 This is the variable for which we seek to understand the effect of
 intervening on it. It is the ``cause;''
 
-\paragraph{\texorpdfstring{\(Y\) denotes the outcome or response of an
-intervention.}{Y denotes the outcome or response of an intervention.}}\label{y-denotes-the-outcome-or-response-of-an-intervention.}
+\textbf{\(Y\) denotes the outcome or response of an intervention.}
 
 It is the ``effect.'' Last week we considered whether marriage \(A\)
 causes happiness \(Y\).
 
-\paragraph{\texorpdfstring{\(Y(a)\) denotes the counterfactual or
-potential state of \(Y\) in response to setting the level of the
-exposure to a specific level,
-\(A=a\).}{Y(a) denotes the counterfactual or potential state of Y in response to setting the level of the exposure to a specific level, A=a.}}\label{ya-denotes-the-counterfactual-or-potential-state-of-y-in-response-to-setting-the-level-of-the-exposure-to-a-specific-level-aa.}
+\textbf{\(Y(a)\) denotes the counterfactual or potential state of \(Y\)
+in response to setting the level of the exposure to a specific level,
+\(A=a\).}
 
 As we will consider in the second half of the course, to consistently
 estimate causal effects we will need to evaluate counterfactual or
@@ -435,8 +399,7 @@ obtaining such counterfactual contrasts -- namely, randomised controlled
 experiments! We will return to this concept later, but for now, it will
 be useful for you to understand the notation.
 
-\paragraph{\texorpdfstring{\(L\) denotes a measured confounder or set of
-confounders}{L denotes a measured confounder or set of confounders}}\label{l-denotes-a-measured-confounder-or-set-of-confounders}
+\textbf{\(L\) denotes a measured confounder or set of confounders}
 
 \begin{itemize}
 \tightlist
@@ -458,8 +421,7 @@ To accurately estimate the causal effect of marriage on happiness, then,
 it is essential to control for \(L\). With cross-sectional data, such
 control might be difficult.
 
-\paragraph{\texorpdfstring{\(U\) denotes an unmeasured
-confounder}{U denotes an unmeasured confounder}}\label{u-denotes-an-unmeasured-confounder}
+\textbf{\(U\) denotes an unmeasured confounder}
 
 \begin{itemize}
 \tightlist
@@ -473,18 +435,16 @@ confounder}{U denotes an unmeasured confounder}}\label{u-denotes-an-unmeasured-c
 If this variable is not measured, we cannot accurately estimate a causal
 effect of marriage on happiness.
 
-\paragraph{\texorpdfstring{\(M\) denotes a mediator or a variable along
-the path from exposure to
-outcome.}{M denotes a mediator or a variable along the path from exposure to outcome.}}\label{m-denotes-a-mediator-or-a-variable-along-the-path-from-exposure-to-outcome.}
+\textbf{\(M\) denotes a mediator or a variable along the path from
+exposure to outcome.}
 
 For example, perhaps marriage causes wealth and wealth causes happiness.
 As we shall see, conditioning on ``wealth'' when estimating the effect
 of marriage on happiness will make it seem that marriage does not cause
 happiness when it does, \emph{through} wealth.
 
-\paragraph{\texorpdfstring{\(\bar{X}\) denotes a sequence of variables,
-for example, a sequence of
-treatments.}{\textbackslash bar\{X\} denotes a sequence of variables, for example, a sequence of treatments.}}\label{barx-denotes-a-sequence-of-variables-for-example-a-sequence-of-treatments.}
+**\(\bar{X}\) denotes a sequence of variables, for example, a sequence
+of treatments.
 
 Imagine we were interested in the causal effect of marriage and
 remarriage on well-being. In this case, there are two treatments \(A_0\)
@@ -492,11 +452,11 @@ and \(A_1\) and four potential contrasts. For the scenario of marriage
 and remarriage affecting well-being, we denote the potential outcomes as
 \(Y(a_0, a_1)\), where \(a_0\) and \(a_1\) represent the specific values
 taken by \(A_0\) and \(A_1\), respectively. Given two treatments,
-\(A_0\) and \(A_1\), four primary contrasts of interest correspond to
-the different combinations of these treatments. These contrasts allow us
-to compare the causal effects of being married versus not and remarried
-versus not on well-being. The potential outcomes under these conditions
-can be specified as follows:
+\(A_0\) and \(A_1\), there are four primary contrasts of interest
+correspond to the different combinations of these treatments. These
+contrasts allow us to compare the causal effects of being married versus
+not and of being remarried versus not on well-being. The potential
+outcomes under these conditions can be specified as follows:
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -511,13 +471,12 @@ can be specified as follows:
   \(Y(1, 1)\): The potential outcome from marriage prevalence.
 \end{enumerate}
 
-Each of these outcomes allows for a specific contrast to be made,
-comparing the well-being under different scenarios of marriage and
-remarriage. Which do we want to contrast? Note, the question about `the
-causal effects of marriage on happiness' is ambiguous because we have
-not stated the causal contrast we are interested in.
+Each of these outcomes allows for a specific contrast. Which do we want
+to contrast? We can see the question about `the causal effects of
+marriage on happiness' is ambiguous. We must stated the causal contrast
+we are interested in, given our substantive research interests.
 
-\(\mathcal{R}\) denotes a randomisation or a chance event.
+\textbf{\(\mathcal{R}\) denotes a randomisation or a chance event.}
 
 \subsubsection{Elements of our Causal
 Graphs}\label{elements-of-our-causal-graphs}
@@ -572,7 +531,8 @@ essential to underscore that this notation signals our uncertainty
 regarding the actual timing of events; our measurements do not give us
 the confidence to assert this sequence definitively.
 
-\paragraph{Arrows}\label{arrows}
+\paragraph{Terminology Arrows/ Directed
+Paths}\label{terminology-arrows-directed-paths}
 
 As indicated in \textbf{?@fig-general}, black arrows denote causality,
 red arrows reveal an open backdoor path, dashed black arrows denote
@@ -804,42 +764,8 @@ observational, we cannot entirely rule out unmeasured confounding.
 
 \newpage{}
 
-\subsection{The Five Elementary Structures of
-Causality}\label{the-five-elementary-structures-of-causality-1}
-
-\begin{table}
-
-\caption{\label{tbl-dags}Elementary structures of causality}
-
-\centering{
-
-\terminologydirectedgraph
-
-}
-
-\end{table}%
-
-\newpage{}
-
-\subsection{Examples of common causal
-questions}\label{examples-of-common-causal-questions}
-
-\begin{table}
-
-\caption{\label{tbl-common-interests}Common causal questions}
-
-\centering{
-
-\terminologycommoncausalinterests
-
-}
-
-\end{table}%
-
-\newpage{}
-
-\subsection{Failure Modes for Confounding Control Related to
-Timing}\label{failure-modes-for-confounding-control-related-to-timing}
+\subsection{Direct Acyclic Graphs Reveal The Importance of
+Timing}\label{direct-acyclic-graphs-reveal-the-importance-of-timing}
 
 \begin{table}
 
@@ -924,6 +850,42 @@ experiments}
 \centering{
 
 \terminologyelconfoundersexperiments
+
+}
+
+\end{table}%
+
+\newpage{}
+
+\subsection{Single World Intervention
+Graphs}\label{single-world-intervention-graphs}
+
+\begin{table}
+
+\caption{\label{tbl-experiments}Common confounding scenarios in
+experiments}
+
+\centering{
+
+\swigtable
+
+}
+
+\end{table}%
+
+\newpage{}
+
+\subsection{The Clarity of Single World Intervention Graph: Case
+Study}\label{the-clarity-of-single-world-intervention-graph-case-study}
+
+\begin{table}
+
+\caption{\label{tbl-experiments}Common confounding scenarios in
+experiments}
+
+\centering{
+
+\pearltable
 
 }
 
@@ -1549,8 +1511,7 @@ data alone typically do not contain the answers we seek.
 
 \begin{table}
 
-\caption{\label{tbl-experiments}Common confounding scenarios in
-experiments}
+\caption{\label{tbl-experiments}Glossary}
 
 \centering{
 
@@ -1562,29 +1523,48 @@ experiments}
 
 \subsection{Appendix B:}\label{appendix-b}
 
-\subsection{Single World Intervention
-Graphs}\label{single-world-intervention-graphs}
+\subsection{Examples of common causal
+questions}\label{examples-of-common-causal-questions}
 
 \begin{table}
 
-\caption{\label{tbl-swig}This table presents three Single World
-Intervention Graphs (SWIGs), one for each treatment condition we
-compare. Note that we obtain robust confounding control by including
-baseline measures for both the treatments and outcomes (refer to
-VanderWeele \emph{et al.} (\citeproc{ref-vanderweele2020}{2020}),
-protocols described in Bulbulia
-(\citeproc{ref-bulbulia2024PRACTICAL}{2024})).We recommend using SWIGs
-because they are more precise and general than standard causal diagrams
-(refer to Richardson and Robins
-(\citeproc{ref-richardson2013swigsprimer}{2013})).}
+\caption{\label{tbl-common-interests}Common causal questions}
 
 \centering{
 
-\lmtptablethree
+\terminologycommoncausalinterests
 
 }
 
 \end{table}%
+
+\subsection{Effect Modification}\label{effect-modification}
+
+\begin{table}
+
+\caption{\label{tbl-common-interests}representing effect modification}
+
+\centering{
+
+\terminologyeffectmodification
+
+}
+
+\end{table}%
+
+\begin{table}
+
+\caption{\label{tbl-common-interests}Common causal questions}
+
+\centering{
+
+\terminologyeffectmodificationtypes
+
+}
+
+\end{table}%
+
+\newpage{}
 
 \subsection{Appedix C:}\label{appedix-c}
 
@@ -1605,6 +1585,8 @@ statistical SEM fails.}
 \end{table}%
 
 \newpage{}
+
+\subsection{Appedix D}\label{appedix-d}
 
 \subsubsection{Time-varying Confounding: Treatment Confounder
 Feedback}\label{time-varying-confounding-treatment-confounder-feedback}
@@ -1666,17 +1648,6 @@ doi:\href{https://doi.org/10.1007/978-94-010-2525-6_6}{10.1007/978-94-010-2525-6
 
 \bibitem[\citeproctext]{ref-pearl2009a}
 Pearl, J (2009) \emph{Causality}, Cambridge University Press.
-
-\bibitem[\citeproctext]{ref-richardson2013swigsprimer}
-Richardson, TS, and Robins, JM (2013) Single world intervention graphs:
-A primer. In \emph{Second UAI workshop on causal structure learning,
-{B}ellevue, {W}ashington}, Citeseer. Retrieved from
-\url{https://citeseerx.ist.psu.edu/document?repid=rep1&type=pdf&doi=07bbcb458109d2663acc0d098e8913892389a2a7}
-
-\bibitem[\citeproctext]{ref-vanderweele2020}
-VanderWeele, TJ, Mathur, MB, and Chen, Y (2020) Outcome-wide
-longitudinal designs for causal inference: A new template for empirical
-studies. \emph{Statistical Science}, \textbf{35}(3), 437--466.
 
 \bibitem[\citeproctext]{ref-westreich2013}
 Westreich, D, and Greenland, S (2013) The table 2 fallacy: Presenting
